troubleshoot/test-pod/openshift/test-deployment.yml
# project
# oc new-project jerome-test --description="Test project" --display-name="Jerome Test"

# registry
# oc get image.config.openshift.io/cluster -o yaml
# podman push --tls-verify=false ceesdev1art00.eulisa.local/docker-release/testcontainers/jerome/hello-world:6.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerome-test-deployment
  namespace: jerome-test
  annotations: {}
  labels:
    app.kubernetes.io/name: jerome-test-deployment
    namespace: jerome-test # Mandatory when using Istio service mesh!!
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jerome-test-deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerome-test-deployment
      annotations:
        # Istio resource downsizing
        sidecar.istio.io/proxyCPU: 200m
        sidecar.istio.io/proxyCPULimit: 300m
        sidecar.istio.io/proxyMemory: 256Mi
        sidecar.istio.io/proxyMemoryLimit: 256Mi
    spec:
      securityContext:
        # Not possible with OCP
        # runAsUser: 1001
        # runAsGroup: 1001
        # supplementalGroups: [1002, 1003]
        # fsGroup: 1001
      containers:
        - name: jerome-test-deployment
          image: ceesdev1art00.eulisa.local/docker-release/testcontainers/jerome/hello-world:6.3
          # image: docker.io/jmaclean/hello-world:6.3 # Public
          # image: docker.io/alpine:3.12.0 # Used to verify if testrunner namespace has the necessary OPAs disabled.

          # Comment to get webserver hello-world
          # command: ["sleep"]
          # args: ["1000"]
          imagePullPolicy: Always
          securityContext:
            # OpenShift specific
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true # New for pod-security-standards? https://kubernetes.io/docs/concepts/security/pod-security-standards/
            
            allowPrivilegeEscalation: false # Must be set!!
            capabilities:
              drop: ["ALL"]
            # capabilities:
            #   add: ["NET_ADMIN", "SYS_TIME"] # Default is some capabilities like chown/chmod.
            #   drop: ["NONE"]
            readOnlyRootFilesystem: true # Must be set!!
          livenessProbe:
            exec:
              command:
                - echo
                - livenessProbe
          readinessProbe:
            exec:
              command:
                - echo
                - readinessProbe
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 50Mi
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /app/conf/ssl/certs
            - name: vol-run
              mountPath: /run
            - name: vol-tmp
              mountPath: /tmp
            - name: vol-app-scratch
              mountPath: /app/scratch
            - name: vol-app-cache
              mountPath: /var/cache/nginx/
            - name: vol-app-logs
              mountPath: /var/log/nginx/
            # - mountPath: "/test-pvc" # For testing OPA only
            #   name: vol-test-pvc
            # - mountPath: "/test-hostpath" # For testing OPA only
            #   name: vol-test-hostpath
      volumes:
        - name: certs
          secret:
            secretName: jerome-test-deployment
        - name: vol-run
          emptyDir: {}
        - name: vol-tmp
          emptyDir: {}
        - name: vol-app-scratch
          emptyDir: {}
        - name: vol-app-cache
          emptyDir: {}
        - name: vol-app-logs
          emptyDir: {}
        # - name: vol-test-pvc # For testing OPA only
        #   persistentVolumeClaim:
        #     claimName: test-pvc-disk 
        # - name: vol-test-hostpath
        #   hostPath:
        #     path: /tmp/test-hostpath
---
apiVersion: v1
kind: Service
metadata:
  name: jerome-test-deployment
  namespace: jerome-test
  labels:
    app.kubernetes.io/name: jerome-test-deployment
spec:
  # type: NodePort # For testing OPA only
  # type: LoadBalancer # For testing OPA only
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: secure
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: jerome-test-deployment
---
